# sei-coinflip-sc

./: Cargo.toml  README.md  buildcontract.sh
.cargo/: config
autoflipbot/: .gitignore  autoflip.js  package.json
examples/: schema.rs
info/devnet/address/: coinflip.txt
info/mainnet/address/: coinflip.txt
info/testnet/address/: coinflip.txt
release/: coinflip.wasm
schema/: config_response.json  execute_msg.json  instantiate_msg.json  query_msg.json
src/: constants.rs  contract.rs  error.rs  msg.rs  state.rs  util.rs
